fixed alignment bug

--- a/css/_apply.scss
+++ b/css/_apply.scss
@@ -148,6 +148,7 @@ $summaryMargin: 1.7em;
 
 	.tech, .links {
 		display: inline-block;
+		vertical-align: top;
 		width: 49%;
 	}
 
